; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/vkms/extr_vkms_composer.c_vkms_set_crc_source.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/vkms/extr_vkms_composer.c_vkms_set_crc_source.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_crtc = type { i32 }
%struct.vkms_output = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vkms_set_crc_source(%struct.drm_crtc* %0, i8* %1) #0 {
  %3 = alloca %struct.drm_crtc*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.vkms_output*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.drm_crtc* %0, %struct.drm_crtc** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load %struct.drm_crtc*, %struct.drm_crtc** %3, align 8
  %9 = call %struct.vkms_output* @drm_crtc_to_vkms_output(%struct.drm_crtc* %8)
  store %struct.vkms_output* %9, %struct.vkms_output** %5, align 8
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @vkms_crc_parse_source(i8* %10, i32* %6)
  store i32 %11, i32* %7, align 4
  %12 = load %struct.vkms_output*, %struct.vkms_output** %5, align 8
  %13 = getelementptr inbounds %struct.vkms_output, %struct.vkms_output* %12, i32 0, i32 1
  %14 = call i32 @spin_lock_irq(i32* %13)
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.vkms_output*, %struct.vkms_output** %5, align 8
  %17 = getelementptr inbounds %struct.vkms_output, %struct.vkms_output* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  %18 = load %struct.vkms_output*, %struct.vkms_output** %5, align 8
  %19 = getelementptr inbounds %struct.vkms_output, %struct.vkms_output* %18, i32 0, i32 1
  %20 = call i32 @spin_unlock_irq(i32* %19)
  %21 = load i32, i32* %7, align 4
  ret i32 %21
}

declare dso_local %struct.vkms_output* @drm_crtc_to_vkms_output(%struct.drm_crtc*) #1

declare dso_local i32 @vkms_crc_parse_source(i8*, i32*) #1

declare dso_local i32 @spin_lock_irq(i32*) #1

declare dso_local i32 @spin_unlock_irq(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
